chore: add buckets pagination